--- a/APICoronaTracker/Web.config
+++ b/APICoronaTracker/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
+    <!--Project Info-->
     <add key="DataPath" value="C:\Temp" />
     <add key="ApiKey" value="0Uiqd1MoAguRJBJvbORekX:0yipidIra9FEGw5nXefhbQ" />
     <add key="ApiURL" value="https://api.collectapi.com/corona/countriesData" />
